gitops/apps/llm/base/tgi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tgi-server
  labels:
    app: tgi-server
    zonaas/workload-type: llm
spec:
  type: ClusterIP
  selector:
    app: tgi-server
  ports:
    - name: http
      port: 8080
      targetPort: 8080
