gitops/apps/llm/base/networkpolicy-allow-object-store-internal.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-object-store-internal
spec:
  podSelector:
    matchLabels:
      zonaas/workload-type: llm
  policyTypes:
    - Egress
  egress:
    - to:
        - ipBlock:
            cidr: 10.10.0.0/16
      ports:
        - protocol: TCP
          port: 443
